classes added to add-product form

--- a/views/add-product.html
+++ b/views/add-product.html
@@ -101,9 +101,12 @@
     </header>
 
     <main>
-        <form action="/admin/add-product" method="POST">
-            <input type="text" name="title">
-            <button>Add Product</button>
+        <form class="product-form" action="/admin/add-product" method="POST">
+            <div class="form-control">
+                <label for="title">Title</label>
+                <input type="text" name="title" id="title">
+            </div>   
+            <button type="submit">Add Product</button>
         </form>
     </main>
 </body>
